Springboot upgrade & others