@@ -39,16 +39,15 @@ public final class Criteria {
     }
 
     public boolean hasFilters() {
-        return filters.filters().size() > 0;
+        return !filters.filters().isEmpty();
     }
 
     public String serialize() {
-        return String.format(
-            "%s~~%s~~%s~~%s",
-            filters.serialize(),
-            order.serialize(),
-            offset.orElse(0),
-            limit.orElse(0)
+        return "%s~~%s~~%s~~%s".formatted(
+                filters.serialize(),
+                order.serialize(),
+                offset.orElse(0),
+                limit.orElse(0)
         );
     }
 }
